--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+imbalanced_learn==0.12.3
 matplotlib==3.8.4
 missingno==0.5.2
-numpy==1.26.4
-pandas==2.2.3
-scikit-learn==1.4.2
-scipy==1.13.1
+numpy==2.4.0
+pandas==2.3.3
+scikit_learn==1.4.2
+scipy==1.16.3
 seaborn==0.13.2
 statsmodels==0.14.6
 xgboost==3.1.2
